step #3 pt 1